InsuranceOrg/force-app/main/default/objects/vlocity_ins__CompiledAttributeOverride__c/vlocity_ins__CompiledAttributeOverride__c.object-meta.xml
<CustomObject>
    <description>A compiled attribute override defines the JSON representation net of all attribute overrides for a given product (usually a commercial offer).</description>
    <label>Compiled Attribute Override</label>
    <nameField>
        <label>Compiled Attribute Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compiled Attribute Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>