InsuranceOrg/force-app/main/default/objects/vlocity_ins__CompiledAttributeOverride__c/fields/vlocity_ins__AttributeMetadataChanges__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeMetadataChanges__c</fullName>
    <label>Attribute Metadata Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>