InsuranceOrg/force-app/main/default/objects/vlocity_ins__CompiledAttributeOverride__c/fields/vlocity_ins__AttributeRules__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeRules__c</fullName>
    <label>Attribute Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>