InsuranceOrg/force-app/main/default/objects/vlocity_ins__CompiledAttributeOverride__c/fields/vlocity_ins__ProductChildItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductChildItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Child Item</label>
    <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
    <relationshipLabel>Compiled Attribute Override</relationshipLabel>
    <relationshipName>Compiled_Attribute_Override</relationshipName>
    <type>Lookup</type>
</CustomField>